Fixed game info css cutting off text.

--- a/content/dota_addons/slideninjaslide/panorama/styles/custom_game/slideninjaslide_game_info.css
+++ b/content/dota_addons/slideninjaslide/panorama/styles/custom_game/slideninjaslide_game_info.css
@@ -111,14 +111,13 @@ Label
 #TipsRow
 {
 	flow-children: down;
-	margin-right: 92px;
+    padding-right: 10px;
 	margin-top: 10px;
 }
 
 #AddRow
 {
     flow-children: down;
-    margin-right: 92px;
     margin-top: 10px;
 }
 
